# image_perception

./: README.md
image_object_detection/: CMakeLists.txt  package.xml
image_object_detection/config/: image_object_detection.yaml
image_object_detection/include/image_object_detection/: ObjectDetector.hpp
image_object_detection/launch/: image_object_detection.launch
image_object_detection/models/: downloadFasterRCNNInceptionV2.sh  downloadMobileNetSSD.sh  downloadYoloV3.sh  downloadYoloV3Tiny.sh
image_object_detection/src/: ObjectDetector.cpp  image_object_detection_node.cpp  image_object_visualization_node.cpp
image_object_tracking/: CMakeLists.txt  package.xml
image_object_tracking/config/: image_object_tracking.yaml
image_object_tracking/include/image_object_tracking/: ObjectTracker.hpp
image_object_tracking/include/image_object_tracking/error_metrics/: DistanceRectError.hpp  IntersectionRectError.hpp  RectErrorMetricBase.hpp
image_object_tracking/launch/: image_object_tracking.launch
image_object_tracking/src/: ObjectTracker.cpp  image_object_tracking_node.cpp  image_object_tracking_visualization_node.cpp
image_perception/: CMakeLists.txt  package.xml
image_perception_msgs/: CMakeLists.txt  package.xml
image_perception_msgs/include/image_perception_msgs/: Conversions.hpp  CvObject.h
image_perception_msgs/msg/: Label.msg  LabelsStamped.msg  TrackedObject.msg
image_perception_msgs/src/: Conversions.cpp
