<?xml version="1.0"?>
<package format="2">
  <name>image_perception</name>
  <version>0.0.0</version>
  <description>
    This package provides foo capability.
  </description>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/image_object_detection</url>
  <author>Alexander Mock</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>image_perception_msgs</exec_depend>
  <exec_depend>image_object_detection</exec_depend>
  <exec_depend>image_object_tracking</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
