<?xml version="1.0"?>
<package format="2">
  <name>image_perception_msgs</name>
  <version>0.0.0</version>
  <description>
    This package provides foo capability.
  </description>
  <maintainer email="amock@uos.de">Alexander Mock</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/image_object_detection</url>
  <author>Alexander Mock</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

</package>
